--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -10,15 +10,18 @@
   position: absolute;
   text-align: left;
   top: 0;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
   width: 100%;
+  z-index: 2;
 }
 
-.nav-menu > li {
+.nav-menu > li > * {
   margin-left: 2rem;
   font-weight: 500;
+  text-decoration: none;
+  color: black;
 }
-.nav-menu > li:nth-child(1){
+.nav-menu > li:nth-child(1) {
   margin-top: 5rem;
 }
 
@@ -31,17 +34,17 @@
 }
 
 .nav-menu.open {
-    opacity: 1;
-    transition: all .5s ease;
-    transform: translateY(0px)
+  opacity: 1;
+  transition: all 0.5s ease;
+  transform: translateY(0px);
 }
 
 .nav-menu.closed {
   opacity: 0;
-  transition: all .5s ease;
-  transform: translateY(-550px)
+  transition: all 0.5s ease;
+  transform: translateY(-550px);
 }
 
-.product-text{
+.product-text {
   line-height: 1.5rem;
 }
