--- a/src/Components/Newsletter/Newsletter.css
+++ b/src/Components/Newsletter/Newsletter.css
@@ -1,4 +1,3 @@
-
 .newsletter-container {
   background-color: #fdca40;
   font-weight: 200;
@@ -22,10 +21,10 @@
 
 .newsletter-form > button {
   background-color: white;
-  border-radius: 0 .75rem .75rem 0;
+  border-radius: 0 0.75rem 0.75rem 0;
   color: black;
   font-weight: 600;
-  letter-spacing: .15rem;
+  letter-spacing: 0.15rem;
   width: 3rem;
 }
 
