--- a/src/Components/Article/Article.css
+++ b/src/Components/Article/Article.css
@@ -20,7 +20,7 @@
 }
 .product-img-container > img {
   width: 100%;
-  transform: translateY(-7rem);
+  transform: translateY(-2rem);
 }
 div.article-desc-container{
     padding: 2rem;
@@ -51,6 +51,6 @@ button.article {
     flex-wrap: wrap;
     justify-content: space-between;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 5rem auto;
   }
 }
