--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,18 +1,23 @@
 header {
 width: 100%;
-background-color: white; 
-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+background-color: #14213D; 
+box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
+height: 4rem;
 }
 header > div {
   align-items: top;
   display: flex;
-  justify-content: space-between;
+  justify-content: right;
   margin: 0 auto;
-  padding: 1rem;
+  padding-right: 1.5rem;
+  padding-top: 1rem;
+  /* padding: 1rem;   */
+
 }
-#logo {
+/* #logo {
   width: 5rem;
-}
+  display: none
+} */
 
 @media (min-width: 768px) {
   #logo {
