--- a/src/pages/Main/Welcome.css
+++ b/src/pages/Main/Welcome.css
@@ -1,17 +1,21 @@
-.welcome > h1 {
-  margin-bottom: 0;
+.welcome-container {
+  padding-top: 3rem;
+  padding-bottom: 1rem;
+  margin-bottom: 4rem;
+  background-color: white;
+  width: 100%;
 }
-.welcome-subtitle {
+.welcome-img-container {
+  text-align: center;
+  width: 100%;
+}
+#logo {
+  width: 10rem;
   margin: 0 auto;
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  letter-spacing: 5px;
-  position: relative;
-  top: -1rem;
 }
 h2.welcome-text {
   font-size: 1.25rem;
-  margin: 0 auto;
+  margin: 3rem auto;
   padding: 0;
   width: 100%;
 }
@@ -20,11 +24,22 @@ h2.welcome-text {
   margin: 0 auto;
   height: 25rem;
   overflow: hidden;
-  max-width: 900px;
+  width: 100%;
+  height: 0;
+  padding-bottom: 40%;
+  max-height: 400px;
+  box-shadow: 1px 1px 3px rgba(rgba(0, 0, 0, 0.5));
 }
 .img-container > img {
-  margin-top: -450px;
-  margin-left: -200px;
+  margin-top: -250px;
+  /* margin-left: -200px; */
+  /* transform: translateY(-700px); */
+  width: 100%;
   /* width: 100%; */
 }
 
+@media (min-width: 468px) {
+  .img-container > img {
+    margin-top: -375px;
+}
+}
