--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,12 +1,17 @@
 header {
-  align-items: center;
+  align-items: top;
   background-color: white;
   display: flex;
   justify-content: space-between;
   padding: 1rem;
 }
- 
-#logo{
+
+#logo {
   width: 5rem;
-  /* z-index: 1; */
+}
+
+@media (min-width: 768px) {
+  #logo {
+    width: 10rem;
+  }
 }
