--- a/src/Components/Newsletter/Newsletter.css
+++ b/src/Components/Newsletter/Newsletter.css
@@ -10,9 +10,10 @@
   text-align: center;
 }
 
-.newsletter-form > input {
+input#newsletter-input {
   display: block;
-  width: 18rem;
+  width: 75vw;
+  max-width: 450px;
 }
 .newsletter-form > label {
   display: block;
@@ -23,6 +24,6 @@
 
 button.newsletter-btn {
   color: black;
-  margin: .5rem;
+  margin: 0.5rem;
   font-weight: 600;
 }
