--- a/src/Components/Article/Article.css
+++ b/src/Components/Article/Article.css
@@ -1,62 +1,56 @@
 .product-container {
   margin: 2rem auto;
   text-align: center;
+  padding: 0;
   width: 95vw;
-  max-width: 800px;
-}
-
-.product-img-container {
-  width: 85vw;
-  height: calc(85vw);
-  overflow: hidden;
-  margin: 0 auto;
   max-width: 30rem;
-  max-height: 25rem;
+  background-color: white;
+  border-radius: 1rem;
+  box-shadow: 0px 5px 5px rgba(0,0,0,.2);
 }
+.product-img-container {
+  overflow: hidden;
+  margin: 0; 
+  border-radius: 1rem 1rem 0 0 ;
+  width: 100%;
+  height: 0;
+  padding-bottom: 70%;  
+  box-shadow: 0px 3px 3px rgba(0,0,0,.2);
 
+}
 .product-img-container > img {
   width: 100%;
-  transform: translateY(-75px);
+  transform: translateY(-7rem);
 }
+div.article-desc-container{
+    padding: 2rem;
+}
+h2.product-title{
+  font-size: 1.75rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  margin: 0;
 
+}
 .product-text {
   text-align: left;
-  padding: 0 2rem;
-  margin: 0 auto 2rem auto;
+  margin: 0 auto;
 }
 
 button.article {
+  margin: 2rem auto;
   text-decoration: none;
   font-weight: 900;
   letter-spacing: 2px;
 }
 
 @media (min-width: 1024px) {
-  div.product-container {
-    /* background-color: red; */
+  .main-container {
     display: flex;
-    border: 1px solid dimgray;
-    background-color: white;
-    padding: 1rem;
-  }
-  h2.product-title {
-    text-align: left;
-    margin-left: 2rem;
-    margin-top: 0;
-  }
-  p.product-text {
-    font-size: 1.5rem;
-    line-height: 1.25;
-    max-width: 350px;
-  }
-  .product-img-container {
-    width: 1000px;
-    overflow: hidden;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1200px;
     margin: 0 auto;
-    height: auto;
-  }
-
-  .product-img-container > img {
-    transform: translateY(-75px);
   }
 }
