--- a/src/Components/Newsletter/Newsletter.css
+++ b/src/Components/Newsletter/Newsletter.css
@@ -27,3 +27,17 @@ button.newsletter-btn {
   margin: 0.5rem;
   font-weight: 600;
 }
+
+@media screen and (min-width: 465px) {
+  button.newsletter-btn {
+    background-color: black;
+    border-radius: 0 .5rem .5rem 0;
+    color: white;
+    font-weight: 600;
+    height: 1.4375em;
+    margin: 0;
+    padding: 1.75rem 1rem;
+    right: 3px
+  }
+
+}
