--- a/src/pages/Main/Welcome.css
+++ b/src/pages/Main/Welcome.css
@@ -4,6 +4,7 @@
   margin-bottom: 4rem;
   background-color: white;
   width: 100%;
+  box-shadow: 0px 10px 0px rgba(0, 0, 0, 0.05);
 }
 .welcome-img-container {
   text-align: center;
