--- a/src/Components/Article/Article.css
+++ b/src/Components/Article/Article.css
@@ -6,7 +6,7 @@
   max-width: 30rem;
   background-color: white;
   border-radius: 1rem;
-  box-shadow: 0px 5px 5px rgba(0,0,0,.2);
+  /* box-shadow: 0px 5px 5px rgba(0,0,0,.2); */
 }
 .product-img-container {
   overflow: hidden;
@@ -15,8 +15,7 @@
   width: 100%;
   height: 0;
   padding-bottom: 70%;  
-  box-shadow: 0px 3px 3px rgba(0,0,0,.2);
-
+  box-shadow: 0px 3px 0px rgba(0,0,0,.2);
 }
 .product-img-container > img {
   width: 100%;
@@ -52,5 +51,6 @@ button.article {
     justify-content: space-between;
     max-width: 1200px;
     margin: 5rem auto;
+
   }
 }
