July 19 Main Page

--- a/src/components/Newsletter/Newsletter.css
+++ b/src/components/Newsletter/Newsletter.css
@@ -1,5 +1,5 @@
 .newsletter-container {
-  background-color: #fdca40;
+  background-color: var(--orange-web);
   font-weight: 200;
   padding-bottom: 2rem;
   padding-top: 2rem;
