7-19 Completed Play Park

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,22 +1,25 @@
 header {
-align-items: center;
-background-color: var(--oxford-blue); 
-display: flex;
-height: 3rem;
-justify-content: space-between;
-padding: 0 1rem;
-margin: 0 auto;
-width: 100%;
+  background-color: var(--oxford-blue); 
 }
-
+header>div{
+  align-items: center;
+  display: flex;
+  height: 3rem;
+  justify-content: flex-start;
+  column-gap: 2rem;
+  margin: 0 auto;
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 0 1rem;
+  width: 100%;
+}
 .nav-title {
   font-family: 'Hammersmith One', sans-serif;
   color: white;
   text-decoration: none;
   font-size: 1.25rem;
 }
-
-svg.pets-icon {
+svg.pets-icon, svg.pets-icon:active, svg.pets-icon:after{
   transform: rotate(-15deg);
   color: var(--text-color)
 }
