--- a/src/pages/Main/Welcome.css
+++ b/src/pages/Main/Welcome.css
@@ -15,10 +15,15 @@
   margin: 0 auto;
 }
 h2.welcome-text {
-  font-size: 1.25rem;
   margin: 3rem auto;
-  padding: 0;
-  width: 100%;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: 5px;
+  position: relative;
+  /* top: -1rem; */
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 400;
+  text-align: center;
 }
 
 .img-container {
