--- a/src/components/PageTitle/PageTitle.css
+++ b/src/components/PageTitle/PageTitle.css
@@ -4,6 +4,8 @@ h1.page-title {
   text-transform: uppercase;
   font-family: 'Quicksand', sans-serif;
   font-weight: 400;
+  text-align: center;
+  font-size: 4rem;
 }
 h2.page-subtitle {
   margin: 0 auto;
@@ -14,4 +16,5 @@ h2.page-subtitle {
   top: -1rem;
   font-family: 'Quicksand', sans-serif;
   font-weight: 300;
+  text-align: center;
 }
