--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,6 +11,7 @@ p.footer {
   letter-spacing: .1rem;
   line-height: 1.25;
   margin: 0 auto;
+  font-size: .75rem;
 }
 
 h3.footer {
@@ -25,7 +26,12 @@ p.copyright{
   margin: 2rem auto;
   pad: 0;
 }
-
+a.footer-social{
+  color: var(--text-color)
+}
+a.footer-social:hover{
+  color: white;
+}
 svg.footer-social {
   font-size: 2rem;
   margin: 1rem;
