--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Luckiest+Guy&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 body {
-  font-family: "Epilogue", sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--bgbody);
+  font-size: 12px;
 }
 .App {
   background-color: var(--bg);
@@ -14,7 +16,12 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
-
+h1, h2, h3, h4, p, a, button {
+  font-family: var(--bodyfont);
+  font-weight: 300;
+  letter-spacing: 1px;
+  line-height: 1.5;
+}
 :root {
   --bg: #f5f5f5;
   --bg-body: #EFEFEF;
@@ -26,6 +33,9 @@ body {
   --text-color: #dadce1;
   --border-radius: 1rem;
   --speed: 500ms;
+  --titlefont: 'Epilogue', sans-serif;
+  --secondaryfont: 'Luckiest Guy', cursive;
+  --bodyfont: 'Poppins', sans-serif;
 }
 
 * {
