--- a/src/components/PageTitle/PageTitle.css
+++ b/src/components/PageTitle/PageTitle.css
@@ -1,11 +1,8 @@
 h1.page-title {
-  margin-top: 3rem;
-  margin-bottom: 0;
-  text-transform: uppercase;
-  font-family: 'Quicksand', sans-serif;
-  font-weight: 400;
-  text-align: center;
   font-size: 4rem;
+  font-weight: 400;
+  margin: 0;
+  text-align: center;
 }
 h2.page-subtitle {
   margin: 0 auto;
